2006-09-19 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* .: Added svn:ignore for MonoDevelop.SourceEditor.pidb

2006-09-15 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs: Makes
	sure multiline documentation is shown correctly. Remove examples
	from popup documentation. Fixes bug #79363.
	
2006-09-12 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs: Moved
	things to Ambience plus cleaned up a bit.

2006-09-11 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.SourceEditor.addin.xml: A few minor
	HIG updates.

2006-09-01 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	  Added missing Dispose call to base class.

2006-08-11 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs: Prepend
	namespace tooltips with a namespace clause.

2006-08-10 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs:
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Provide the
	  ambience to use for code completion.
 
2006-08-07 Philip Turnbull <philip.turnbull@gmail.com>
	
	* MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs:
	* MonoDevelop.SourceEditor.InsightWindow/MethodInsightDataProvider.cs:
	* MonoDevelop.SourceEditor.InsightWindow/IndexerInsightDataProvider.cs:
	Track API changes in Ambience.

2006-08-07 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Ensure that the
	  cursor is visible after using the code completion window. Fixes
	  bug #78955.

2006-08-04 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: 
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	  Implement support for IEncodedTextContent.

2006-08-02 Lluis Sanchez Gual  <lluis@novell.com>
