@@ -73,21 +73,21 @@
 		<Command id = "MonoDevelop.SourceEditor.EditorCommands.ToggleBookmark"
 				icon = "md-toggle-bookmark"
 				shortcut = "Control|F2"
-				description = "Toggle Bookmark"
+				description = "Toggle bookmark"
 				_label = "Toggle Bookmark" />
 		<Command id = "MonoDevelop.SourceEditor.EditorCommands.PrevBookmark"
 				icon = "md-goto-prevbookmark"
 				shortcut = "Shift|F2"
-				description = "Previous Bookmark"
+				description = "Previous bookmark"
 				_label = "Previous Bookmark" />
 		<Command id = "MonoDevelop.SourceEditor.EditorCommands.NextBookmark"
 				icon = "md-goto-nextbookmark"
 				shortcut = "F2"
-				description = "Next Bookmark"
+				description = "Next bookmark"
 				_label = "Next Bookmark" />
 		<Command id = "MonoDevelop.SourceEditor.EditorCommands.ClearBookmarks"
 				icon = "md-clear-all-bookmarks"
-				description = "Clear Bookmarks"
+				description = "Clear bookmarks"
 				_label = "Clear Bookmarks" />
 		<Command id = "MonoDevelop.SourceEditor.EditorCommands.GotoLineNumber"
 				_label = "_Goto Line..." 
